Fixes #19305 - fixing spacing issue on facts page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -664,3 +664,8 @@ code.transparent {
   margin-right: 5px;
 }
 
+.factsTable .breadcrumb {
+  padding: 0;
+  margin-bottom: 0;
+}
+
